2011-05-08  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* atari.c, cassette.[ch], cfg.c, screen.c, sio.c, ui.c: Added support for
  switching bettween tape loading/saving without need to re-attach a tape
  image. Added a "Tape management" menu with new options for tape rewinding
  and creating a blank CAS image. Added loading/saving of the currently
  attached tape image in the config file. Without the SIO patch, a user now
  must manually switch tape recording on/off if needed. Fixed some bugs and
  cleaned the code a bit.

* DOC/directx.txt, atari_curses.c, atari_falcon.c, atari_ps2.c,
  dos/atari_vga.c, javanvm/atari_javanvm.c, sdl/input.c, win32/atari_win32.c:
  Added the Alt+T shortcut to the new Tape Management menu. The "tilt screen"
  in the Win32 port has been remapped to Alt+Shift+Z to avoid conflict.

* DOC/USAGE: Updated the "Cassette operation" section with the new features.

* screen.c: Added displaying of current tape position when sector counter is
  enabled. Display a "Dn" symbol instead of "n" during disk operations.

* ui.c: Renamed the "Show disk activity" and "Show sector counter" options to
  reflect the fact that they also affect tape operations.


2011-05-05  Petr Stehlik <pstehlik@sophics.cz>
* atari800.spec: David Bolt has provided an update that allows building
  the RPM packages for Fedora, CentOS, SUSE and Mandriva distributions.


2011-04-30  Tomasz Krasuski <kr0tki@poczta.onet.pl>
* videomode.c: Fixed a bug with not allowing a VIDEOMODE_HOST_ASPECT_RATIO=0:0
  entry in the config file. Now when this value is encountered, the emulator
  performs aspect ratio autodetection.

* DOC/USAGE, atari800.man, atari.[ch], atari_curses.c, cfg.[ch], colours.c,
  input.c, ui.c, util.c, sdl/sound.c: Added support for automatic saving of
  configuration on emulator exit. (Had to move the System ROM Settings to
  a separate submenu in UI in order to make place for the new option.)